# quantum-computing-learning

./: LICENSE  README.md  pyproject.toml
qc_learn/: abstract.py  simulator.py
source_code/chapter_2/: qubit.ipynb
tests/: test_abstract.py  test_simulate.py
