[tool.poetry]
name = "quantum-computing-learning"
version = "0.1.0"
description = ""
authors = ["3gee <huangbaochenwo@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
numpy = "^1.26.4"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
